src/test/deca/context/valid/created/assign_compatible/subTypes.deca
// Description:
//      Test de la compatibilite pour l'affectation
//      Regle 2, T2 sous type de T1
// Resultats:
//      OK

class Mere{}
class Fille extends Mere{}

{
    Mere m = new Fille();
}